# isa

./: CMakeLists.txt  Client.h  ClientArgumentParser.h  Error.h  README.md  RequestParser.h  Server.h  ServerArgumentParser.h  isaclient.cpp  isaserver.cpp
Helpers/: SignalHandler.cpp  SignalHandler.h  VectorMapper.cpp  VectorMapper.h
client/: Client.cpp  Client.h  ClientArgumentParser.cpp  ClientArgumentParser.h
error/: Error.h
server/: Data.cpp  Data.h  DataProcesser.cpp  DataProcesser.h  Datas.h  RequestParser.cpp  RequestParser.h  Server.cpp  Server.h  ServerArgumentParser.cpp  ServerArgumentParser.h  VectorMapper.cpp  VectorMapper.h
